<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluegrey">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/question_text"
        android:textColor="@color/grey"/>
    <LinearLayout
        android:id="@+id/button_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_text"
        android:gravity="center"
        android:paddingVertical="20dp">
        <Button
            android:id="@+id/four_cards_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_cards_button"
            android:layout_below="@id/question_text"
            android:paddingHorizontal="54dp"/>
        <Button
            android:id="@+id/six_cards_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six_cards_button"
            android:layout_toRightOf="@id/four_cards_button"
            android:layout_below="@+id/question_text"
            android:paddingHorizontal="54dp"/>
        <Button
            android:id="@+id/eight_cards_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight_cards_button"
            android:layout_toRightOf="@+id/six_cards_button"
            android:layout_below="@id/question_text"
            android:paddingHorizontal="54dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_layout1"
        android:gravity="center">

        <Button
            android:id="@+id/ten_cards_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_cards_button"
            android:layout_below="@id/four_cards_button"
            android:paddingHorizontal="50dp"/>
        <Button
            android:id="@+id/twelve_cards_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twelve_cards_button"
            android:layout_below="@id/six_cards_button"
            android:layout_toRightOf="@id/ten_cards_button"
            android:paddingHorizontal="50dp"/>
        <Button
            android:id="@+id/fourteen_cards_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourteen_cards_button"
            android:layout_below="@id/eight_cards_button"
            android:layout_toRightOf="@id/twelve_cards_button"
            android:paddingHorizontal="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_layout2"
        android:gravity="center"
        android:paddingVertical="20dp">

        <Button
            android:id="@+id/sixteen_cards_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixteen_cards_button"
            android:layout_below="@id/ten_cards_button"
            android:paddingHorizontal="50dp"/>
        <Button
            android:id="@+id/eighteen_cards_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eighteeen_cards_button"
            android:layout_below="@id/twelve_cards_button"
            android:layout_toRightOf="@id/sixteen_cards_button"
            android:paddingHorizontal="50dp"/>
        <Button
            android:id="@+id/twenty_cards_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_cards_button"
            android:layout_below="@id/fourteen_cards_button"
            android:layout_toRightOf="@id/eighteen_cards_button"
            android:paddingHorizontal="50dp"/>
    </LinearLayout>

</RelativeLayout>