<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluegrey">

    <LinearLayout
        android:id="@+id/space_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/scoreDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_text"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="35sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentTop="false"
        android:layout_below="@id/space_layout">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/row1_layout">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/row2_layout">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/row3_layout">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/row4_layout">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/try_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again_button" />
        <Button
            android:id="@+id/new_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game_button"/>
        <Button
            android:id="@+id/end_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_game_button"/>

    </LinearLayout>

</RelativeLayout>